Remove Thinking from Summary

--- a/templates/results.htm
+++ b/templates/results.htm
@@ -55,7 +55,7 @@ body,td,a,p,.h{font-family:arial,sans-serif}
 <table border="0" cellpadding="0" cellspacing="0" id="mn">
     <tbody>
         <tr>
-            <td width="75" rowspan="1" valign="top"><h1><a href="?query" id="logo" title="Go to DreamSearch Home"><img src="{{ url_for('static', filename='logosmall.png') }}" alt="" height="67" width="70" style="border:0"></a></h1></td>
+            <td width="75" rowspan="1" valign="top"><h1><a href="/" id="logo" title="Go to DreamSearch Home"><img src="{{ url_for('static', filename='logosmall.png') }}" alt="" height="67" width="70" style="border:0"></a></h1></td>
             <td width="559" valign="top" style="padding-left:9px">
                 <form action="/" name="gs" id="tsf" method="GET" style="display:block;margin:0;background:none">
                     <table border="0" cellpadding="0" cellspacing="0" id="sbhost" style="margin-top:18px;position:relative">
